[gd_scene load_steps=9 format=2]

[ext_resource path="res://Assets/images/Lorb.png" type="Texture" id=1]
[ext_resource path="res://scripts/lorbnew.gd" type="Script" id=2]
[ext_resource path="res://scripts/lorbnewhitbox.gd" type="Script" id=3]
[ext_resource path="res://Assets/Sounds/lorbdeath.wav" type="AudioStream" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10.063, 9.5537 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 47.2176, 64.344 )

[sub_resource type="Animation" id=3]
resource_name = "idle"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=4]
resource_name = "death"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 1, 2 ]
}

[node name="lorbnew" type="KinematicBody2D"]
scale = Vector2( 0.5, 0.5 )
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 2
vframes = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -6.17319, -56.5712 )
shape = SubResource( 1 )
disabled = true

[node name="hitbox" type="Area2D" parent="."]
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox"]
position = Vector2( -10.3646, -54.344 )
shape = SubResource( 2 )

[node name="idle" type="AnimationPlayer" parent="."]
anims/idle = SubResource( 3 )

[node name="death" type="AnimationPlayer" parent="."]
anims/death = SubResource( 4 )

[node name="deathtimer" type="Timer" parent="."]
wait_time = 0.5

[node name="death3" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[connection signal="area_entered" from="hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="area_entered" from="hitbox" to="hitbox" method="_on_hitbox_area_entered"]
[connection signal="body_entered" from="hitbox" to="." method="_on_hitbox_body_entered"]
[connection signal="timeout" from="deathtimer" to="." method="_on_deathtimer_timeout"]
